@@ -1,3 +1,10 @@
+2009-07-03 Jens Thoms Toerring    <jt@toerring.de>
+
+	* Some bugs in code for drawing of folder and
+	formbrowser objects repaired.
+
+	* Mistakes in documentation removed.
+
 2009-07-01 Jens Thoms Toerring    <jt@toerring.de>
 
 	* Several bugs in fdesign removed
